1.4.2 (June XXX, 2022)
 - Bugfixing - Fixed issue with useTreatments hooks, to return control treatments without evaluating splits when the SDK client is not ready or is destroyed, to avoid not ready impressions and warning log.
 - Bugfixing - Updated submitters logic, to avoid dropping impressions and events that are being tracked while POST request is pending.

1.4.1 (May 11, 2022)
 - Updated React peer dependency range to include React@18.x.x.
 - Updated @splitsoftware/splitio dependency to version 10.18.2, which includes some vulnerability fixes.

1.4.0 (April 11, 2022)
 - Updated @splitsoftware/splitio dependency to version 10.18.0, which includes:
      - Added user consent feature to allow delaying or disabling the data tracking from SDK until user consent is explicitly granted or declined. Read more in our docs.
      - Added `scheduler.impressionsQueueSize` property to SDK configuration to limit the amount of impressions tracked in memory. Read more in our docs.
      - Added support to SDK clients on browser to optionally bind attributes to the client, keeping these loaded within the SDK along with the user ID, for easier usage when requesting flag.
      - Updated format for MySegments keys in LocalStorage, keeping backwards compatibility (issue https://github.com/splitio/javascript-client/issues/638).
      - Updated dependencies for vulnerability fixes, general polishing, and bug fixes.

1.3.0 (September 29, 2021)
 - Updated @splitsoftware/splitio dependency to version 10.16.0, which includes:
      - Updated localhost mode to emit SDK_READY_FROM_CACHE event in Browser when using localStorage (issue https://github.com/splitio/react-client/issues/34).
      - Updated streaming logic to use the newest version of our streaming service, including:
            - Integration with Auth service V2, connecting to the new channels and applying the received connection delay.